fixed go-back button alignment bug

--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ nav {
   /* margin: 15px 0 0 15px; */
   position: absolute;
   left: 15px;
-  top: 15px;
+  top: 5px;
 }
 .logo {
   font-size: 2rem;
